--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,3 +1,4 @@
+@model TipCalculatorModel
 @{
     Layout = null;
 }
@@ -6,10 +7,32 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width" />
-        <title>Home Page</title>
+        <title>Tip Calculator</title>
+        <style>
+
+        </style>
     </head>
     <body>
         <h1>Tip Calculator</h1>
-        <p>Coming from Controller: @ViewBag.Title</p>
+        <form asp-action="Index" method="post">
+            <div>
+                <label asp-for="BillAmount">BillAmount:</label>
+                <input asp-for="BillAmount" />
+            </div>
+            <div>
+                <label>15% tip:</label>
+                <input value="@ViewBag.Tip15.ToString("C2")" readonly />
+            </div>
+            <div>
+                <label>20% tip:</label>
+                <input value="@ViewBag.Tip20.ToString("C2")" readonly />
+            </div>
+            <div>
+                <label>25% tip:</label>
+                <input value="@ViewBag.Tip25.ToString("C2")" readonly />
+            </div>
+            <button type="submit">Calculate</button>
+            <a asp-action="Index">Clear</a>
+        </form>
     </body>
 </html>
