update 1.7(input validation for the bill input is done)

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,6 +6,7 @@
 
 <h1>Tip Calculator</h1>
 <form asp-action="Index" method="post">
+    <div asp-validation-summary = "All"></div>
     <div>
         <label asp-for="BillAmount">BillAmount:</label>
         <input asp-for="BillAmount" />
