update 2.0(output boxes changed)

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,15 +13,15 @@
     </div>
     <div>
         <label>15% tip:</label>
-        <input value="@ViewBag.Tip15.ToString("C2")" readonly />
+        <span>@ViewBag.Tip15.ToString("C2")</span>
     </div>
     <div>
         <label>20% tip:</label>
-        <input value="@ViewBag.Tip20.ToString("C2")" readonly />
+        <span>@ViewBag.Tip20.ToString("C2")</span>
     </div>
     <div>
         <label>25% tip:</label>
-        <input value="@ViewBag.Tip25.ToString("C2")" readonly />
+        <span>@ViewBag.Tip25.ToString("C2")</span>
     </div>
     <button type="submit">Calculate</button>
     <a asp-action="Index">Clear</a>
